; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/mips/boot/extr_elf2ecoff.c_convert_ecoff_esecs.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/mips/boot/extr_elf2ecoff.c_convert_ecoff_esecs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.scnhdr = type { i8*, i8*, i8*, i8*, i8*, i8*, i8*, i8*, i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.scnhdr*, i32)* @convert_ecoff_esecs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @convert_ecoff_esecs(%struct.scnhdr* %0, i32 %1) #0 {
  %3 = alloca %struct.scnhdr*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.scnhdr* %0, %struct.scnhdr** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  br label %6

6:                                                ; preds = %65, %2
  %7 = load i32, i32* %5, align 4
  %8 = load i32, i32* %4, align 4
  %9 = icmp slt i32 %7, %8
  br i1 %9, label %10, label %70

10:                                               ; preds = %6
  %11 = load %struct.scnhdr*, %struct.scnhdr** %3, align 8
  %12 = getelementptr inbounds %struct.scnhdr, %struct.scnhdr* %11, i32 0, i32 8
  %13 = load i8*, i8** %12, align 8
  %14 = call i8* @swab32(i8* %13)
  %15 = load %struct.scnhdr*, %struct.scnhdr** %3, align 8
  %16 = getelementptr inbounds %struct.scnhdr, %struct.scnhdr* %15, i32 0, i32 8
  store i8* %14, i8** %16, align 8
  %17 = load %struct.scnhdr*, %struct.scnhdr** %3, align 8
  %18 = getelementptr inbounds %struct.scnhdr, %struct.scnhdr* %17, i32 0, i32 7
  %19 = load i8*, i8** %18, align 8
  %20 = call i8* @swab32(i8* %19)
  %21 = load %struct.scnhdr*, %struct.scnhdr** %3, align 8
  %22 = getelementptr inbounds %struct.scnhdr, %struct.scnhdr* %21, i32 0, i32 7
  store i8* %20, i8** %22, align 8
  %23 = load %struct.scnhdr*, %struct.scnhdr** %3, align 8
  %24 = getelementptr inbounds %struct.scnhdr, %struct.scnhdr* %23, i32 0, i32 6
  %25 = load i8*, i8** %24, align 8
  %26 = call i8* @swab32(i8* %25)
  %27 = load %struct.scnhdr*, %struct.scnhdr** %3, align 8
  %28 = getelementptr inbounds %struct.scnhdr, %struct.scnhdr* %27, i32 0, i32 6
  store i8* %26, i8** %28, align 8
  %29 = load %struct.scnhdr*, %struct.scnhdr** %3, align 8
  %30 = getelementptr inbounds %struct.scnhdr, %struct.scnhdr* %29, i32 0, i32 5
  %31 = load i8*, i8** %30, align 8
  %32 = call i8* @swab32(i8* %31)
  %33 = load %struct.scnhdr*, %struct.scnhdr** %3, align 8
  %34 = getelementptr inbounds %struct.scnhdr, %struct.scnhdr* %33, i32 0, i32 5
  store i8* %32, i8** %34, align 8
  %35 = load %struct.scnhdr*, %struct.scnhdr** %3, align 8
  %36 = getelementptr inbounds %struct.scnhdr, %struct.scnhdr* %35, i32 0, i32 4
  %37 = load i8*, i8** %36, align 8
  %38 = call i8* @swab32(i8* %37)
  %39 = load %struct.scnhdr*, %struct.scnhdr** %3, align 8
  %40 = getelementptr inbounds %struct.scnhdr, %struct.scnhdr* %39, i32 0, i32 4
  store i8* %38, i8** %40, align 8
  %41 = load %struct.scnhdr*, %struct.scnhdr** %3, align 8
  %42 = getelementptr inbounds %struct.scnhdr, %struct.scnhdr* %41, i32 0, i32 3
  %43 = load i8*, i8** %42, align 8
  %44 = call i8* @swab32(i8* %43)
  %45 = load %struct.scnhdr*, %struct.scnhdr** %3, align 8
  %46 = getelementptr inbounds %struct.scnhdr, %struct.scnhdr* %45, i32 0, i32 3
  store i8* %44, i8** %46, align 8
  %47 = load %struct.scnhdr*, %struct.scnhdr** %3, align 8
  %48 = getelementptr inbounds %struct.scnhdr, %struct.scnhdr* %47, i32 0, i32 2
  %49 = load i8*, i8** %48, align 8
  %50 = call i8* @swab16(i8* %49)
  %51 = load %struct.scnhdr*, %struct.scnhdr** %3, align 8
  %52 = getelementptr inbounds %struct.scnhdr, %struct.scnhdr* %51, i32 0, i32 2
  store i8* %50, i8** %52, align 8
  %53 = load %struct.scnhdr*, %struct.scnhdr** %3, align 8
  %54 = getelementptr inbounds %struct.scnhdr, %struct.scnhdr* %53, i32 0, i32 1
  %55 = load i8*, i8** %54, align 8
  %56 = call i8* @swab16(i8* %55)
  %57 = load %struct.scnhdr*, %struct.scnhdr** %3, align 8
  %58 = getelementptr inbounds %struct.scnhdr, %struct.scnhdr* %57, i32 0, i32 1
  store i8* %56, i8** %58, align 8
  %59 = load %struct.scnhdr*, %struct.scnhdr** %3, align 8
  %60 = getelementptr inbounds %struct.scnhdr, %struct.scnhdr* %59, i32 0, i32 0
  %61 = load i8*, i8** %60, align 8
  %62 = call i8* @swab32(i8* %61)
  %63 = load %struct.scnhdr*, %struct.scnhdr** %3, align 8
  %64 = getelementptr inbounds %struct.scnhdr, %struct.scnhdr* %63, i32 0, i32 0
  store i8* %62, i8** %64, align 8
  br label %65

65:                                               ; preds = %10
  %66 = load i32, i32* %5, align 4
  %67 = add nsw i32 %66, 1
  store i32 %67, i32* %5, align 4
  %68 = load %struct.scnhdr*, %struct.scnhdr** %3, align 8
  %69 = getelementptr inbounds %struct.scnhdr, %struct.scnhdr* %68, i32 1
  store %struct.scnhdr* %69, %struct.scnhdr** %3, align 8
  br label %6

70:                                               ; preds = %6
  ret void
}

declare dso_local i8* @swab32(i8*) #1

declare dso_local i8* @swab16(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
